# nao_interaction

./: LICENSE.txt  README.md
nao_audio/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_audio/nodes/: nao_audio.py
nao_interaction/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_interaction/launch/: nao_audio_interface.launch  nao_vision_interface.launch
nao_interaction/nodes/: nao_audio.py  nao_vision.py
nao_interaction_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_interaction_launchers/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_interaction_launchers/launch/: nao_audio_interface.launch  nao_vision_interface.launch
nao_interaction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_interaction_msgs/msg/: AudioSourceLocalization.msg  FaceDetected.msg  LandmarkDetected.msg  MovementDetected.msg
nao_interaction_msgs/srv/: AudioMasterVolume.srv  AudioPlayback.srv  AudioRecorder.srv  GetAudioMasterVolume.srv  LearnFace.srv  NaoSetFile.srv  SetAudioMasterVolume.srv  VisionMotionSensitivity.srv
nao_vision/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
nao_vision/nodes/: nao_vision.py
