<package>
  <name>nao_audio</name>
  <version>0.1.5</version>
  <description>
    Package for the Nao robot, providing access to NAOqi audio proxies
  </description>
  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/nao_audio</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_interaction/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_interaction</url>
  
  <author>Manos Tsardoulias</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nao_interaction_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
