<package>
  <name>nao_interaction</name>
  <version>0.1.5</version>
  <description>
    <p>
      Metapackage for the Nao robot, providing access to:
        - NAOqi audio proxies
        - NAOqi vision proxies
    </p>
  </description>
  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/nao_interaction</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_interaction/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_interaction</url>
  
  <author>Manos Tsardoulias</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

  <run_depend>nao_interaction_msgs</run_depend>
  <run_depend>nao_interaction_launchers</run_depend>
  <run_depend>nao_audio</run_depend>
  <run_depend>nao_vision</run_depend>

</package>
