<package>
  <name>nao_interaction_msgs</name>
  <version>0.0.1</version>
  <description>
    Extra messages and services declarations for the Nao humanoid
  </description>
  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nao_extra_msgs</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_extras/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_extras</url>
  
  <author>Armin Hornung</author>
  <author>Stefan Osswald</author>
  <author>Daniel Maier</author>
  <author>Miguel Sarabia</author>
  <author>Manos Tsardoulias</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
